# rp2040-rust-hello

./: Cargo.toml  README.md
.cargo/: config.toml
