[package]
name = "rp2040-rust-hello"
version = "0.1.0"
edition = "2018"
authors = ["A Lloyd Flanagan <a.lloyd.flanagan@gmail.com"]
description = "My initial Rust program for the Adafruit Feather RP2040"
license = "GPL-3"
repository = "https://github.com/alflanagan/rp2040-rust-hello.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# list of deps from https://github.com/rp-rs/rp-hal/blob/main/boards/adafruit-feather-rp2040/Cargo.toml
# so probably some are unnecessary
[dependencies]
adafruit-feather-rp2040 = "0.4.0"
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.1", optional = true }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
# panic-handler = "2.1.2"
rp2040-boot2 = { version = "0.2.1", optional = true }
rp2040-hal = "0.6.0"

[dev-dependencies]
#embedded-hal = "0.2.7"
#fugit = "0.3.6"
#nb = "1.0.0"
#panic-halt = "0.2.0"
#smart-leds = "0.3.0"
#ws2812-pio = "0.4.0"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it doesn't hurt to enable it
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
